--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=javascript
-*.css linguist-language=javascript
-*.html linguist-language=javascript
+*.js linguist-language=HTML
+*.css linguist-language=HTML
+*.html linguist-language=HTML
